Fixed overflow of menu items in Combobox

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -1491,6 +1491,7 @@ label.jqInvalid{
 .ui-autocomplete li.ui-menu-item a{
 	padding: 5px;
 	color: #555;
+    word-break: break-all;
 }
 .ui-menu .ui-menu-item a.ui-state-focus {
  	background: none;
